Bug 138874 - The Type bar in Options - LibreOffice - Paths dialog does not invert the list of paths
Summary: The Type bar in Options - LibreOffice - Paths dialog does not invert the list...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-12-13 10:26 UTC by sdc.blanco
Modified: 2020-12-14 19:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2020-12-13 10:26:18 UTC
According to: https://help.libreoffice.org/7.2/en-US/text/shared/optionen/01010300.html

"You can change the sequence of entries by clicking the bar in the Type column."

In 6.3.6.2 (and 3.3), this results in inverting the list.

In 7.2.0.0.alpha0+ it does not work.

Do not see any value in having that capability in this particular context (Tools>Options>LibreOffice-Paths), but maybe this function is relevant in other contexts. 

Main reason for this bug report:  Should that sentence in the help page be deleted?  or will the UI revert to previous behavior?
Comment 1 sdc.blanco 2020-12-13 10:30:03 UTC
Adding needsUXEval and cc: Caolán (because it might be a weld problem)
Comment 2 Ming Hua 2020-12-13 10:50:39 UTC
Sounds like the same issue in bug 129250, which Caolán fixed.
Comment 3 Buovjaga 2020-12-13 11:36:40 UTC
Bibisected with linux-64-6.4 to
https://git.libreoffice.org/core/commit/3f738d8f9e5c448ddf352a8e10e6c619dde7d87d
weld SvxPathTabPage

Adding Cc: to Caolán McNamara
Comment 4 Caolán McNamara 2020-12-13 20:07:41 UTC
It doesn't seem particularly useful, but I'll add it back as its removal wasn't deliberate
Comment 5 sdc.blanco 2020-12-13 20:29:47 UTC
(In reply to Caolán McNamara from comment #4)
> It doesn't seem particularly useful.
I agree.  That is why I asked for UXEval.

> but I'll add it back as its removal wasn't deliberate
If you haven't started, then maybe better to wait to hear from Design team. It be easier/faster for me to remove the sentence from the help page, then for you to use time to "fix" something that is not needed.
Comment 6 Caolán McNamara 2020-12-13 20:42:40 UTC
it seems trivial enough: https://gerrit.libreoffice.org/c/core/+/107663
Comment 7 Commit Notification 2020-12-14 08:39:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/298663c36bdb64cf05bc80abb7d212ed1091b6a9

tdf#138874 restore sort on first column of paths treeview

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-12-14 08:40:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/3925f38cbd384dca41154f15435bcec97d22f884

tdf#138874 restore sort on first column of paths treeview

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2020-12-14 19:58:55 UTC
Yay, thanks

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+
Build ID: eed2f0fd3fb70bcf26539683c4347e418da66ff1
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 14 December 2020