tdf#138874 restore sort on first column of paths treeview

Change-Id: I7cd831de30523a61631be5cc2f1f3b8a001d9e4d